--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,8 @@
     <string name="SNAP_RECOGNITION_PROJECT">Recognition Project</string>
     <string name="SNAP_RECOGNITION_PROJECT_TITLE">Snap Recognition Project Name</string>
     <string name="SNAP_RECOGNITION_PROJECT_SUMMARY">Enter your Snap Recognition Project Name</string>
-    <string name="licenseKey">LICE036-S0PN-5110</string>
-    <string name="applicationId">APP9733-S507-6772</string>
+    <string name="licenseKey">LICE075-D09A-64E3</string>
+    <string name="applicationId">APP3075-D09A-59C8</string>
     <string name="SNAP_USER">Snap User</string>
     <string name="SNAP_USER_TITLE">Your Snap Username</string>
     <string name="SNAP_USER_SUMMARY">Enter your Snap Username</string>
