Updated Images and added new download permissions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,39 +2,27 @@
 * Copyright 2013-2016 EMC Corporation.  All rights reserved.
  -->
 <resources>
-    <string name="snap_environment">Snap Environment</string>
-    <string name="snap_environment_summary">Enter Your Snap Environment</string>
-    <string name="snap_export_type">Snap Export Type</string>
-    <string name="snap_export_type_summary">Enter Your Snap Export Type</string>
-    <string name="snap_export_name">Snap Export Profile Name</string>
-    <string name="snap_export_name_summary">Enter Your Snap Export Profile Name</string>
-    <string name="snap_IA_server">Captiva Server</string>
-    <string name="snap_IA_server_summary">Enter Your Captiva Server Connection Name</string>
-    <string name="snap_IA_catpureflow">Captiva CaptureFlow</string>
-    <string name="snap_IA_catpureflow_summary">Enter Your Captiva CaptureFlow Name</string>
-    <string name="snap_profiles">Snap Profiles</string>
-    <string name="SNAP_CAPTURE_PROFILE">Capture Profile</string>
-    <string name="SNAP_CAPTURE_PROFILE_TITLE">Snap Capture Profile Name</string>
-    <string name="SNAP_CAPTURE_PROFILE_SUMMARY">Enter your Snap Capture Profile Name</string>
-    <string name="SNAP_RECOGNITION_PROJECT">Recognition Project</string>
-    <string name="SNAP_RECOGNITION_PROJECT_TITLE">Snap Recognition Project Name</string>
-    <string name="SNAP_RECOGNITION_PROJECT_SUMMARY">Enter your Snap Recognition Project Name</string>
+    <string name="Captiva_catpureflow">Captiva CaptureFlow</string>
+    <string name="captiva_settings">Captiva Connection Settings</string>
+    <string name="Captiva_catpureflow_summary">Enter Your Captiva CaptureFlow Name</string>
+    <string name="captiva_profiles">Captiva Profiles</string>
+    <string name="IP_PROFILE">Image Processor Profile</string>
+    <string name="IP_PROFILE_TITLE">Image Processor Profile</string>
+    <string name="IP_PROFILE_SUMMARY">Enter your Captiva Image Processor Profile Name</string>
+    <string name="Captiva_RECOGNITION_PROJECT">Recognition Project</string>
+    <string name="Captiva_RECOGNITION_PROJECT_TITLE">Recognition Project Name</string>
+    <string name="Captiva_RECOGNITION_PROJECT_SUMMARY">Enter your Recognition Project Name</string>
     <string name="licenseKey">LICE075-D09A-64E3</string>
     <string name="applicationId">APP3075-D09A-59C8</string>
-    <string name="SNAP_USER">Snap User</string>
-    <string name="SNAP_USER_TITLE">Your Snap Username</string>
-    <string name="SNAP_USER_SUMMARY">Enter your Snap Username</string>
-    <string name="SNAP_PASSWORD">Snap Password</string>
-    <string name="SNAP_PASSWORD_TITLE">Your Snap Password</string>
-    <string name="SNAP_PASSWORD_SUMMARY">Enter your Snap Password</string>
-    <string name="SNAP_URL">Snap URL</string>
-    <string name="SNAP_URL_TITLE">Your Snap URL</string>
-    <string name="SNAP_URL_SUMMARY">Enter Your Snap URL</string>
-    <string name="snap_settings">Snap Connection</string>
-    <string name="SNAP_SUBSCRIPTION">Snap Subscription</string>
-    <string name="SNAP_SUBSCRIPTION_TITLE">Your Snap Subscription</string>
-    <string name="SNAP_SUBSCRIPTION_SUMMARY">Enter Your Snap Subscription Name</string>
-
+    <string name="Captiva_USER">Snap User</string>
+    <string name="Captiva_USER_TITLE">Your Captiva Username</string>
+    <string name="Captiva_USER_SUMMARY">Enter your Captiva Username</string>
+    <string name="Captiva_PASSWORD">Captiva Password</string>
+    <string name="Captiva_PASSWORD_TITLE">Your Captiva Password</string>
+    <string name="Captiva_PASSWORD_SUMMARY">Enter your Captiva Password</string>
+    <string name="Captiva_URL">Captiva URL</string>
+    <string name="Captiva_URL_TITLE">Your Captiva URL</string>
+    <string name="Captiva_URL_SUMMARY">Enter Your Captiva REST URL</string>
     <string name="app_name">Gareth\'s Mobile Capture</string>
     <string name="AppCopyright">Copyright 2013&#8211;2016 by EMC Corporation</string>
     <string name="MainPage_Title">EMC World Mobile</string>
